--- a/pdfjs/viewer.css
+++ b/pdfjs/viewer.css
@@ -260,6 +260,7 @@
 .annotationLayer .circleAnnotation svg ellipse,
 .annotationLayer .polylineAnnotation svg polyline,
 .annotationLayer .polygonAnnotation svg polygon,
+.annotationLayer .inkAnnotation svg polyline,
 .annotationLayer .stampAnnotation,
 .annotationLayer .fileAttachmentAnnotation {
   cursor: pointer;
@@ -1446,6 +1447,7 @@ html[dir="rtl"] .secondaryToolbarButton > span {
   content: url(images/secondaryToolbarButton-scrollWrapped.png);
 }
 
+/* $FB: add bookflip button image */
 .secondaryToolbarButton.bookFlip::before {
   content: url(images/secondaryToolbarButton-bookFlip.png);
 }
@@ -2211,6 +2213,7 @@ html[dir='rtl'] #documentPropertiesOverlay .row > * {
     content: url(images/secondaryToolbarButton-scrollWrapped@2x.png);
   }
 
+/* $FB: add bookflip button image */
   .secondaryToolbarButton.bookFlip::before {
     content: url(images/secondaryToolbarButton-bookFlip@2x.png);
   }
@@ -2270,7 +2273,7 @@ html[dir='rtl'] #documentPropertiesOverlay .row > * {
     padding: 0;
     margin: 0;
   }
-/*
+
   .page {
     float: left;
     display: none;
@@ -2283,7 +2286,7 @@ html[dir='rtl'] #documentPropertiesOverlay .row > * {
   .page[data-loaded] {
     display: block;
   }
-*/
+
   .fileInput {
     display: none;
   }
